--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,42 @@
-.App {
-  text-align: center;
+* {
+  margin: 0 0;
+  padding: 0 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  background-color: #eee;
+  height: 100vh;
+  width: 100vw;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  font-family: sans-serif;
 }
 
-.App-link {
-  color: #61dafb;
+.recipe-tracker {
+  background-color: #fff;
+  width: 40vw;
+  height: 70vh;
+  border-radius: 15px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.recipe-tracker-header {
+  background-color: #adf;
+  padding: 1% 0;
+  display: flex;
+  justify-content: center;
+}
+
+.recipe {
+  width: 100%;
+  background-color: #ddd;
+  padding: 2% 6%;
+}
+
+.recipe:nth-child(even) {
+  background-color: #fff;
 }
